사진첩 앱1 실습코드

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KotlinStudy">
         <activity
+            android:name=".ImgActivity7"
+            android:exported="true" />
+        <activity
+            android:name=".ImgActivity6"
+            android:exported="true" />
+        <activity
+            android:name=".ImgActivity5"
+            android:exported="true" />
+        <activity
+            android:name=".ImgActivity4"
+            android:exported="true" />
+        <activity
+            android:name=".ImgActivity3"
+            android:exported="true" />
+        <activity
+            android:name=".ImgActivity2"
+            android:exported="true" />
+        <activity
+            android:name=".ImgActivity1"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
